--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-circular-progressbar": "^2.1.0",
+    "react-countup": "^6.3.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
